<resources>
    <string name="app_name">nsukLib</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--main menu-->
    <string name="action_search">Search</string>
    <string name="insert_books">Add a book</string>
    <string name="book_details">Book Details</string>
    <string name="home">Home</string>
    <string name="scanned">Scanned Result</string>


    <!--drawer menu-->
    <string name="communicate">Communicate</string>
    <string name="user_profile">Profile</string>
    <string name="user_setting">Settings</string>
    <string name="barcode">Barcode</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

    <!--Add book names, labels-->
    <string name="username">Edit</string>
    <string name="book_author">Author:</string>
    <string name="book_title">Title:</string>
    <string name="date">Date:</string>
    <string name="isbn">ISBN:</string>
    <string name="upload_book">upload</string>
    <string name="add_book_label">Enter the given Book Details</string>
    <string name="delete_book_label">Enter the ISBN of book to be deleted</string>
    <string name="delete_button">delete book</string>
    <string name="delete_a_book">Do you want to delete book ?</string>
    <string name="cancel_delete">No, cancel</string>
    <string name="delete">Yes, delete</string>
    <string name="pick_up">Pick Up Date Cannot be earlier than today and
        not more than 7 days ahead!</string>
    <string name="text_pick_up">Pick Up Date: not more than 7 days ahead!</string>
    <string name="text_drop_off"> Not more than 3 days from PickUp!</string>

    <!--add book  hints-->
    <string name="author_hints">enter name of the author</string>
    <string name="title_hints">enter book title</string>
    <string name="date_hints">date published</string>
    <string name="isbn_hints">enter the ISBN</string>
    <string name="pick_up_date">Choose pick up date</string>
    <string name="drop_off_date">Choose drop off date</string>




    <string name="log_in">Log Out</string>
    <string name="email"> email@email.com</string>
    <string name="title_activity_login">Sign in</string>
    <string name="name">Your name</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="doAss">Assignments needs to be done now, stuff to do</string>
    <string name="sign_up">Sign up with email</string>
    <string name="admin_signing">Admin Login</string>

    <string name="action_sign_up">Sign up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="signUpAccount">Do not have an account? Create one!</string>

    <!---Books related names-->
    <string name="book_name">Books</string>
    <string name="success_upload">Book Details Uploaded Successfully </string>
    <string name="empty_author">Author cannot be empty</string>
    <string name="empty_title">Title cannot be empty</string>

    <!--web client id-->
    <string name="web_clied_id">662078412665-9qoli0tsak6rr01uii5a1353c57i1b6d.apps.googleusercontent.com</string>


    <string name="error_occur">Error ocurred: </string>
    <string name="sign_out">Logout</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="loading">Loading…</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>


    <!--nav header text-->
    <string name="username_text">Android Studio</string>
    <string name="email_text">android.studio@email.com</string>
    <string name="title_activity_settings">Settings</string>

    <string name="copy_right" translatable="false">Copyrights © %1$d</string>

</resources>
