<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/custom_button"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/user_profile"
            android:icon="@drawable/circled_user"
            android:title="@string/user_profile" />
    <!--    <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/user_setting" /> -->
        <item
            android:id="@+id/barcode"
            android:icon="@drawable/barcode_16"
            android:title="@string/barcode" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/action_share" />
    </group>
    <group
        android:id="@+id/group"
        android:checkableBehavior="single" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/help_24"
        android:title="@string/action_help" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/about_24"
        android:title="@string/action_about" />
    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/shutdown"
        android:title="@string/sign_out" />


</menu>
