<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_button"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="89dp"
            android:layout_height="68dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:scaleType="centerCrop"
            android:src="@drawable/some_people"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/circleImageView"
            android:orientation="vertical">

            <TextView
                android:id="@+id/family_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nav_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textStyle="italic" />
        </LinearLayout>

    </RelativeLayout>

    <View style="@style/Divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/details_label"
            android:text="Author: " />

        <TextView
            android:id="@+id/author_name"
            style="@style/book_details"
            android:textStyle="bold"
            tools:text="Author Name" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/details_label"
            android:text="Title:" />

        <TextView
            android:id="@+id/book_title"
            style="@style/book_details"
            android:maxLines="2"
            android:paddingRight="22dp"
            tools:text="Book Title" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/details_label"
            android:text="ISBN:" />

        <TextView
            android:id="@+id/book_isbn"
            style="@style/book_details"
            android:text="book isbn"
            android:textAllCaps="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <TextView
            style="@style/details_label"
            android:text="Date:" />

        <TextView
            android:id="@+id/publish_date"
            style="@style/book_details"
            android:text="publish date" />
    </RelativeLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Pick Up Date:"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/pick_up_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/pick_up_date"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Drop off Date:"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/drop_off_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/drop_off_date"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text=" Rental Limit is 3 Days Maximum"
        android:textSize="14sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/proceed_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="Proceed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="normal" />

    <View style="@style/Divider" />

</LinearLayout>